robballen75-Salesforce/4-7-15/src/objects/MS_Project__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Operating_System__c</fullName>
        <label>Primary Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2003 Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 97</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7 32 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7 64 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 8 32 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 8 64 Bit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Product__c</fullName>
        <inlineHelpText>Enter the main product for which the implementation, upgrade, training, etc. is being done. This is used for analysis and reporting purposes.</inlineHelpText>
        <label>Primary Project Product</label>
        <picklist>
            <picklistValues>
                <fullName>DocXtools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocXtools Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PatentCompanion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BClean Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Product Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Word_Processor_A__c</fullName>
        <formula>CASE(  Account__r.PrimaryWordProc__c ,
&quot;Word 2000&quot;,&quot;Word 2000&quot;,
&quot;Word 2002 (XP)&quot;,&quot;Word 2002 (XP)&quot;,
&quot;Word 2003&quot;,&quot;Word 2003&quot;,
&quot;Word 2003 - Standard&quot;,&quot;Word 2003 - Standard&quot;,
&quot;Word 2007&quot;,&quot;Word 2007&quot;,
&quot;Word 97&quot;,&quot;Word 97&quot;,
&quot;Word 2010&quot;,&quot;Word 2010&quot;,
&quot;WordPerfect 10&quot;,&quot;WordPerfect 10&quot;,
&quot;WordPerfect 11&quot;,&quot;WordPerfect 11&quot;,
&quot;WordPerfect 12&quot;,&quot;WordPerfect 12&quot;,
&quot;WordPerfect 9&quot;,&quot;WordPerfect 9&quot;,
&quot;WordPerfect X3&quot;,&quot;WordPerfect X3&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Word Processor (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Word_Processor__c</fullName>
        <label>Primary Word Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Word 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2002 (XP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2003 - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2010 32 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2010 64 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2013 32-Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 2013 64-Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word 97</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordPerfect 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordPerfect 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordPerfect 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordPerfect 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordPerfect X3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proj_Hrs_Logged_BILLABLE_Not_Chargeable__c</fullName>
        <description>Work that should be billable that isn&apos;t.  It could be due to customer sensitivity, overruns, etc.  It does not include issues such as product problems, planning errors, etc.</description>
        <label>Hrs Logged-BILLABLE (Not Chargeable)</label>
        <summarizedField>MS_Time_Entry__c.TE_Billable_Not_Chargeable__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proj_Hrs_Logged_NON_BILLABLE_Internal__c</fullName>
        <description>The sum of non-billable project hours logged due to internal issues (product problems, planning issues, etc.).</description>
        <label>Hrs Logged-NON-BILLABLE (Internal)</label>
        <summarizedField>MS_Time_Entry__c.TE_Hours_NON_BILLABLE_Internal__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Variance_f__c</fullName>
        <formula>IF(Project_Hours__c=0, 0,
( Project_Hours__c  -Project_Hours_Logged_f__c )/Project_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variance calculated as difference between project hours in budget and project hours logged. 
NEGATIVE = over budget
POSITIVE = under budget</inlineHelpText>
        <label>Project Budget Variance (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Complete_f__c</fullName>
        <formula>IF(Project_Hours__c =0,0,
IF(
Project_Hours_Logged_f__c &gt;Project_Hours__c, 1,
Project_Hours_Logged_f__c / Project_Hours__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated % showing project hours logged divided by project hours in budget.  If more time logged than in budget, project shows as 100% complete.</inlineHelpText>
        <label>Project % Complete (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>document the purpose/objectives/scope/deliverables/deployment audience of the project</inlineHelpText>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Health_Indicator__c</fullName>
        <formula>IMAGE( 
IF(
ISPICKVAL(  Project_Health_Rating__c , &quot;Green&quot;), &quot;/img/samples/light_green.gif&quot;, 

IF(
ISPICKVAL(  Project_Health_Rating__c,&quot;Yellow&quot;), &quot;/img/samples/light_yellow.gif&quot;, 

IF(
ISPICKVAL(  Project_Health_Rating__c,&quot;Red&quot;), &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;

)))
, &quot;status color&quot;)</formula>
        <label>Project Health Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health_Rating__c</fullName>
        <label>Project Health Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Hours_Logged_f__c</fullName>
        <inlineHelpText>Calculated roll-up of all time entry hours for this project.</inlineHelpText>
        <label>Hrs  Logged - BILLABLE</label>
        <summarizedField>MS_Time_Entry__c.Time_Entry_Hours__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Hours_Remaining_f__c</fullName>
        <formula>Project_Hours__c - Project_Hours_Logged_f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project hours minus total of time entry hours logged for this project.</inlineHelpText>
        <label>Project Hours Remaining (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Hours__c</fullName>
        <description>This is the number of hours specified in the SOW.  If there is no SOW, this is the number of hours agreed upon to be done for the client/prospect.</description>
        <inlineHelpText>Enter hours included for this project.</inlineHelpText>
        <label>Project Hours (Approved or in SOW)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Lead)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <inlineHelpText>Information used to uniquely identify projects.</inlineHelpText>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Sponsor)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Project Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status_Details__c</fullName>
        <description>This field contains the up-to-date status of the project.</description>
        <inlineHelpText>Enter the project status:
1)  Current state of the project
2)  Current state of the project deliverables
3)  Issues
4)  Work completed last week
5)  Work due in the upcoming week</inlineHelpText>
        <label>Project Status Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CR Followup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete - Pending Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Upgrade Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_SubType__c</fullName>
        <label>Project Sub-Type</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>Client Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other DocXtools/Product Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-product related guidance/service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Survey_Returned_Date__c</fullName>
        <label>Project Survey Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Survey_Sent_Date__c</fullName>
        <label>Project Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity that is related to this project.</description>
        <inlineHelpText>Projects that are owned by the (pre)Sales team should have an associated opportunity.</inlineHelpText>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_Matter_Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject Matter Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Subject Matter Expert)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TO_Version__c</fullName>
        <inlineHelpText>Please enter the version to which we will be upgrading</inlineHelpText>
        <label>Upgrade TO Version (DocXtools)</label>
        <picklist>
            <controllingField>Project_SubType__c</controllingField>
            <picklistValues>
                <fullName>1.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 2a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSC_Signoff_Date__c</fullName>
        <description>Used to indicate that the project is complete, TSC has been notified and agreed that the appropriate information has been passed to them.</description>
        <label>TSC Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Table_of_Authority_Tool_A__c</fullName>
        <formula>CASE( Account__r.TOA_Tool__c ,
&quot;CiteIt&quot;,&quot;CiteIt&quot;,
&quot;Levit &amp; James Best Authority&quot;,&quot;Levit &amp; James Best Authority&quot;,
&quot;LexisNexis Full Authority&quot;,&quot;LexisNexis Full Authority&quot;,
&quot;Native Word&quot;,&quot;Native Word&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Shepherd Suite&quot;,&quot;Shepherd Suite&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table of Authority Tool (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_of_Authority_Tool__c</fullName>
        <label>Table of Authority Tool</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CiteIt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levit &amp; James Best Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis Nexis Full Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheppherd Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date_for_W2007_A__c</fullName>
        <formula>Account__r.Date_for_Word_2007__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date for W2007 (A)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Date_for_W2010_A__c</fullName>
        <formula>Account__r.Date_for_2010__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date for W2010 (A)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Technical Lead)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Automation_A__c</fullName>
        <formula>CASE(  Account__r.Templates__c  ,
&quot;BEC Legal&quot;,&quot;BEC Legal&quot;,
&quot;CCC MacroPro&quot;,&quot;CCC MacroPro&quot;,
&quot;Custom&quot;,&quot;Custom&quot;,
&quot;D3&quot;,&quot;D3&quot;,
&quot;Esquire iCreate&quot;,&quot;Esquire iCreate&quot;,
&quot;Homegrown&quot;,&quot;Homegrown&quot;,
&quot;Infoware&quot;,&quot;Infoware&quot;,
&quot;Ki Systems&quot;,&quot;Ki Systems&quot;,
&quot;KKL&quot;,&quot;KKL&quot;,
&quot;Legal MacPac&quot;,&quot;Legal MacPac&quot;,
&quot;Legal TemplatesPlus&quot;,&quot;Legal TemplatesPlus&quot;,
&quot;Native Word&quot;,&quot;Native Word&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Payne&quot;,&quot;Payne&quot;,
&quot;SoftWise Innova&quot;,&quot;SoftWise Innova&quot;,
&quot;SoftWise MacroSuite&quot;,&quot;SoftWise MacroSuite&quot;,
&quot;Tikit - TMS&quot;,&quot;Tikit - TMS&quot;,
&quot;WordAssist&quot;,&quot;WordAssist&quot;,
&quot;Word Exchange&quot;,&quot;Word Exchange&quot;,
&quot;Word Tech&quot;,&quot;Word Tech&quot;,
&quot;WordTricks&quot;,&quot;WordTricks&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Automation (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Automation__c</fullName>
        <label>Template Automation</label>
        <picklist>
            <picklistValues>
                <fullName>BEC Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC MacroPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iCreate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infoware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ki Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KKL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal MacPac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal TemplatesPlus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftWise Innova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftWise MacroSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tikit - TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordAssist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordTricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Billable_Not_Chargeable__c</fullName>
        <formula>Project_Hours_Logged_f__c + Proj_Hrs_Logged_BILLABLE_Not_Chargeable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable + Billable Not Chargeable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Hours_Logged__c</fullName>
        <formula>Project_Hours_Logged_f__c + Proj_Hrs_Logged_BILLABLE_Not_Chargeable__c  +  Proj_Hrs_Logged_NON_BILLABLE_Internal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Project Hours Logged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Change_Order_Amount__c +  Paid_Amount__c +  Pre_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Training Lead)</relationshipLabel>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Survey_Returned_Date__c</fullName>
        <label>Training Survey Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Survey_Sent_Date__c</fullName>
        <label>Training Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Consultant Overseeing Project</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_of_Consulting_Hours_Remaining__c</fullName>
        <description>This is a formula that adds the Paid, Pre-Paid and Change order amounts, divides them by the number of Paid, Pre-Paid, Change Order and Unpaid days to calculate the rate/hour.  This is then multiplied by the number of hours remaining on the project to determine how much revenue is outstanding.</description>
        <formula>IF(  Project_Hours__c &gt; 0,(((  Paid_Amount__c + Pre_Paid_Amount__c +  Change_Order_Amount__c )/( Change_Order_Days__c + Pre_paid_Days__c +  Paid_Days__c + No_Charge_Days__c ))/8)* Project_Hours_Remaining_f__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How much revenue remains to be earned from this point forward in the project?</inlineHelpText>
        <label>Value of Consulting Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2007_Migration_Plan_A__c</fullName>
        <formula>CASE( Account__r.X02007_Migration_Plan__c ,
&quot;In Progress&quot;,&quot;In Progress&quot;,
&quot;Not Determined&quot;,&quot;Not Determined&quot;,
&quot;Not Moving&quot;,&quot;Not Moving&quot;,
&quot;On Hold&quot;,&quot;On Hold&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Microsoft Word Migration Plan (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_exception_status__c</fullName>
        <description>Read-only field used by the Project Exception Alert report.The value is set by an automated process and is assigned using criteria that determines if the project is Overdue, Over budget or stalled.</description>
        <label>Project Exception Status</label>
        <picklist>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_exception_status_last_update__c</fullName>
        <description>Read-only field used by the Project Exception Alert report.The value is set by an automated process and is assigned using criteria that determines if the project is Overdue, Over budget or stalled.</description>
        <label>Project Exception Status Last Update</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>